--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Meteo Hub</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <input type="search" placeholder="Enter a city..." required />
+      <input type="submit" value="Search" />
+    </header>
+    <main>
+      <h1>Zurich</h1>
+      <p>Tuesday 13:47, scattered clouds Humidity: 43%, Wind: 6.69km/h</p>
+      🌥️24°C
+    </main>
+    <footer>
+      This project was coded by AdiO-25, is open-sourced on GitHub and hosted on
+      Netlify
+    </footer>
   </body>
 </html>
