--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
       🌥️24°C
     </main>
     <footer>
-      This project was coded by AdiO-25, is open-sourced on GitHub and hosted on
-      Netlify
+      This project was coded by
+      <a href="https://github.com/AdiO-25" target="_blank">AdiO-25</a>, is
+      <a href="https://github.com/AdiO-25/meteo-hub" target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and hosted on
+      <a href="" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
