--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
     <title>Meteo Hub</title>
   </head>
   <body>
-    <header>
-      <input type="search" placeholder="Enter a city..." required />
-      <input type="submit" value="Search" />
-    </header>
-    <main>
-      <h1>Zurich</h1>
-      <p>Tuesday 13:47, scattered clouds Humidity: 43%, Wind: 6.69km/h</p>
-      🌥️24°C
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/AdiO-25" target="_blank">AdiO-25</a>, is
-      <a href="https://github.com/AdiO-25/meteo-hub" target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and hosted on
-      <a href="" target="_blank">Netlify</a>
-    </footer>
+    <div class="container-box">
+      <header>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </header>
+      <main>
+        <h1>Zurich</h1>
+        <p>Tuesday 13:47, scattered clouds Humidity: 43%, Wind: 6.69km/h</p>
+        🌥️24°C
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/AdiO-25" target="_blank">AdiO-25</a>, is
+        <a href="https://github.com/AdiO-25/meteo-hub" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and hosted on
+        <a href="https://meteo-hub-by-ao.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
