updated temperature position and style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
               Humidity: <strong>43%</strong>, Wind: <strong>6.69km/h</strong>
             </div>
           </div>
-          <div class="weather-temperature">🌥️24°C</div>
+          <div class="weather-temperature">
+            <span class="temperature-icon">🌥️</span>
+            <span class="temperature-number">24</span>
+            <span class="temperature-metrics">°C</span>
+          </div>
         </div>
       </main>
       <hr />
