correct metric & default city

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <main>
         <div class="search-output-container">
           <div>
-            <h1 class="city-result" id="city-result">Zurich</h1>
+            <h1 class="city-result" id="city-result"></h1>
             <div class="weather-data">
               Tuesday 13:47, scattered clouds
               <br />
