create forecast html and CSS

--- a/index.html
+++ b/index.html
@@ -57,6 +57,48 @@
             <span class="temperature-metrics">°C</span>
           </div>
         </div>
+        <div class="forecast-container">
+          <div class="forecast-day-one">
+            <div class="forecast-container-day">Mon</div>
+            <div class="forecast-container-icon">🌥️</div>
+            <div class="forecast-container-temperatures">
+              <div class="forecast-container-temperature-max">19°</div>
+              <div class="forecast-container-temperature-min">12°</div>
+            </div>
+          </div>
+          <div class="forecast-day-two">
+            <div class="forecast-container-day">Tue</div>
+            <div class="forecast-container-icon">🌥️</div>
+            <div class="forecast-container-temperatures">
+              <div class="forecast-container-temperature-max">19°</div>
+              <div class="forecast-container-temperature-min">12°</div>
+            </div>
+          </div>
+          <div class="forecast-day-two">
+            <div class="forecast-container-day">Wed</div>
+            <div class="forecast-container-icon">🌥️</div>
+            <div class="forecast-container-temperatures">
+              <div class="forecast-container-temperature-max">19°</div>
+              <div class="forecast-container-temperature-min">12°</div>
+            </div>
+          </div>
+          <div class="forecast-day-two">
+            <div class="forecast-container-day">Thu</div>
+            <div class="forecast-container-icon">🌥️</div>
+            <div class="forecast-container-temperatures">
+              <div class="forecast-container-temperature-max">19°</div>
+              <div class="forecast-container-temperature-min">12°</div>
+            </div>
+          </div>
+          <div class="forecast-day-two">
+            <div class="forecast-container-day">Fri</div>
+            <div class="forecast-container-icon">🌥️</div>
+            <div class="forecast-container-temperatures">
+              <div class="forecast-container-temperature-max">19°</div>
+              <div class="forecast-container-temperature-min">12°</div>
+            </div>
+          </div>
+        </div>
       </main>
       <hr />
       <footer>
